@@ -1,0 +1,19 @@
+# Copyright 2009 Sidu Ponnappa
+
+# Licensed under the Apache License, Version 2.0 (the "License"); 
+# you may not use this file except in compliance with the License. 
+# You may obtain a copy of the License at Http://www.apache.org/licenses/LICENSE-2.0
+# Unless required by applicable law or agreed to in writing, software distributed under the License 
+# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
+# See the License for the specific language governing permissions and limitations under the License. 
+
+module Wrest #:nodoc:
+  module Native #:nodoc:
+    module StandardTokens
+      Close = 'Close'
+      KeepAlive = 'Keep-Alive'
+      FormEncoded = 'application/x-www-form-urlencoded'
+    end
+  end
+end
+
